@@ -1,5 +1,5 @@
 /**********************************************************************
- * $Id: mitab_imapinfofile.cpp,v 1.26 2008/03/07 20:16:17 dmorissette Exp $
+ * $Id: mitab_imapinfofile.cpp,v 1.27 2008/09/26 14:40:24 aboudreault Exp $
  *
  * Name:     mitab_imapinfo
  * Project:  MapInfo mid/mif Tab Read/Write library
@@ -31,6 +31,9 @@
  **********************************************************************
  *
  * $Log: mitab_imapinfofile.cpp,v $
+ * Revision 1.27  2008/09/26 14:40:24  aboudreault
+ * Fixed bug: MITAB doesn't support writing DateTime type (bug 1948)
+ *
  * Revision 1.26  2008/03/07 20:16:17  dmorissette
  * Fixed typos in comments
  *
@@ -435,6 +438,12 @@ OGRErr IMapInfoFile::CreateField( OGRFieldDefn *poField, int bApproxOK )
         eTABType = TABFFloat;
         if( nWidth == 0 )
             nWidth = 32;
+    }
+    else if( poField->GetType() == OFTDateTime )
+    {
+        eTABType = TABFDateTime;
+        if( nWidth == 0 )
+            nWidth = 10;
     }
     else if( poField->GetType() == OFTString )
     {
